<resources>
    <string name="app_name">LeoAppAbi</string>
    <string name="hours_min_default">00</string>
    <string name="days_default">000</string>
    <string name="days">TAGE</string>
    <string name="hours">STUNDEN</string>
    <string name="minutes">MINUTEN</string>
    <string name="seconds">SEKUNDEN</string>
    <string name="confirm">OK</string>
    <string name="textview_placeholder">placeholder</string>
    <string name="info_text">
        Danke, dass du unsere Abiballfinananzierung unterstützt! \n \n \"LeoAbi-Countdown\" ist ein Projekt des LeoApp-Teams, um einen Beitrag zur Finanzierung des SLG
        Abiballs am 30. Juni 2018 zu leisten.
    </string>
</resources>
